Fixes UI bug related to long service name
The service name can became very long and it
can overflow the section as described in
issue 5702.

The fix uses overflow functionality to visually
cut the text that does not fit in the screen,
avoiding covering over nearby visual elements.
This affects weighted and mirrored services.

--- a/webui/src/css/sass/app.scss
+++ b/webui/src/css/sass/app.scss
@@ -131,6 +131,12 @@ body {
       white-space: normal;
     }
   }
+  &-overflow {
+    max-width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   &-accent, &-rule {
     color: $accent;
     background-color: rgba($accent, 0.1);
